@@ -1363,7 +1363,8 @@ public class TexturePackLoader {
 			throw new TextureLoadingError("Could not open texture pack: no file specified");
 		}
 		if (!tpFile.isFile()) {
-			throw new TextureLoadingError("Could not open texture pack: " + tpFile.getAbsolutePath());
+			throw new TextureLoadingError("Could not open texture pack: "
+					+ tpFile.getAbsolutePath());
 		}
 		Log.info("Loading textures from " + tpFile.getAbsolutePath());
 		loadTexturePack(tpFile, allTextures.keySet(), rememberTP);
@@ -1374,8 +1375,7 @@ public class TexturePackLoader {
 
 		File defaultTP = MinecraftFinder.getMinecraftJar();
 		boolean isDefault = tpFile.equals(defaultTP);
-		String tpName = isDefault ? "default texture pack"
-				: "texture pack";
+		String tpName = isDefault ? "default texture pack" : "texture pack";
 		tpName += " (" + tpFile.getAbsolutePath() + ")";
 
 		Set<String> notLoaded = new HashSet<String>(toLoad);
@@ -1390,7 +1390,7 @@ public class TexturePackLoader {
 				}
 			}
 
-			// fall back on terrain.png
+			// Fall back on terrain.png.
 			loadTerrainTextures(texturePack, notLoaded);
 
 			if (rememberTP) {
@@ -1421,8 +1421,8 @@ public class TexturePackLoader {
 			}
 			Log.info(msg.toString());
 
-			if (!isDefault) {
-				// fall back on default TP
+			if (!isDefault && defaultTP != null) {
+				// Fall back on default resource pack.
 				loadTexturePack(defaultTP, notLoaded, false);
 			}
 		}
